--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -31,3 +31,12 @@ section#telefone {
     width: 311px;
     background-image: url('../imagens/frame-iphone.png');
 }
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 268px;
+    height: 472px;
+
+}
