--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,4 +1,4 @@
-@charset "UTF-8"
+@charset "UTF-8";
 
 * {
     margin: 0px;
@@ -7,19 +7,21 @@
 }
 
 html, body {
-    height: 100vh;
-    width: 100vh;
+    height: vh;
+    width: wh;
+    background-color: black;
 }
+
 body {
     background: url('../imagens/fundo-madeira.jpg') no-repeat top center;
     background-size: cover;
-    background-attachment: fixed
+    background-attachment: fixed;
+
 }
 
 main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    height: 100vh;
 }
 
 section#telefone {
@@ -29,14 +31,15 @@ section#telefone {
     transform: translate(-50%, -50%);
     height: 627px;
     width: 311px;
-    background-image: url('../imagens/frame-iphone.png');
+    background-color: blue;
+    background: url('../imagens/frame-iphone.png') no-repeat top center;
 }
 
 iframe#tela {
     position: relative;
-    top: 80px;
+    top: 79px;
     left: 22px;
-    width: 268px;
-    height: 472px;
+    height: 473px;
+    width: 269px;
 
 }
